# decoder

./: .gitignore  CMakeLists.txt  README.md
analysis/: analysis.py  results.txt  simulation.cpp
example/: main.cpp  simple_example.cpp
include/: AbstractDecoder.hpp  BitFlipDecoder.hpp  Channel.hpp  Context.hpp  Encoder.hpp  MajorityDecoder.hpp  matrix.hpp
src/: Channel.cpp  Context.cpp  Encoder.cpp  MajorityDecoder.cpp  main.cpp
src/algebra/: matrix.cpp
src/decoders/: BitFlipDecoder.cpp  MajorityDecoder.cpp
src/utils/: Context.cpp
